fix(language-switcher): align dropdown on the right

--- a/components/language-switcher/element.css
+++ b/components/language-switcher/element.css
@@ -37,7 +37,7 @@
 
 .language-switcher__dropdown {
   position: absolute;
-  left: 0;
+  right: 0;
   z-index: 1;
 
   width: max-content;
